<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mealFavoriteDetail"
            type="com.dimasnoufal.dimasnoufal_mealdb.model.MealsItemId" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.FavoriteDetailActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_detail_poster"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:contentDescription="@string/poster"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/img_placeholder" />


                <TextView
                    android:id="@+id/tv_meal_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="100dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@{mealFavoriteDetail.strMeal}"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_detail_poster"
                    tools:text="@string/nama_makanan" />

                <TextView
                    android:id="@+id/tv_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/id"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/tv_id_meal"
                    app:layout_constraintTop_toBottomOf="@+id/iv_detail_poster"
                    tools:text="ID: " />

                <TextView
                    android:id="@+id/tv_id_meal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/montserrat"
                    android:text= "@{mealFavoriteDetail.idMeal}"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_detail_poster"
                    tools:text="@string/id_52959" />

                <TextView
                    android:id="@+id/tv_food_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_italic"
                    android:text="@{mealFavoriteDetail.strCategory}"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="@+id/tv_meal_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_meal_name"
                    tools:text="@string/seafood" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@{mealFavoriteDetail.strArea}"
                    android:textSize="18sp"
                    app:drawableStartCompat="@drawable/ic_location_on_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_food_type"
                    tools:text="@string/british" />

                <TextView
                    android:id="@+id/tv_how_to_cook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/how_to_cook"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_location"
                    tools:text="@string/how_to_cook" />

                <TextView
                    android:id="@+id/tv_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:justificationMode="inter_word"
                    android:text="@{mealFavoriteDetail.strInstructions}"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_how_to_cook"
                    tools:text="@string/lorem_ipsum" />

                <TextView
                    android:id="@+id/tv_recommendation_meal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/recommendation_meal"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_instructions"
                    tools:text="@string/recommendation_meal" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_meal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_recommendation_meal"
                    tools:listitem="@layout/item_row_rekomendasi" />

                <Button
                    android:id="@+id/btn_remove_favorite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/red"
                    android:text="@string/remove_from_favorite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_meal" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/warning"
            android:src="@drawable/ic_error_24"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/failed_to_fetch_data"
            android:textColor="#FF4343"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/iv_empty"
            app:layout_constraintStart_toStartOf="@+id/iv_empty"
            app:layout_constraintTop_toBottomOf="@+id/iv_empty" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

